# tg-llm-multibot

./: .gitignore  README.md  docker-compose.yml
confs/: init.json
confs/bots/: jesuo_bot.json  johanadark_bot.json  ludoviko_bot.json  ludoviko_bot_eo.json  meditisto_bot.json
llm-server/: Dockerfile  app.py  clean.py  generator.py  models.py  pyproject.toml  requirements.txt  responder.py  selector.py  stopper.py  validate.py
tg-handler/: Dockerfile  go.mod  go.sum  main.go
tg-handler/api/: api.go
tg-handler/memory/: memory.go
tg-handler/messaging/: messaging.go
